--- a/frontend/src/components/Modals/Game/Keyword.module.css
+++ b/frontend/src/components/Modals/Game/Keyword.module.css
@@ -8,9 +8,10 @@
     bottom: 0;
     left: 0;
     z-index: 99999999;
-    background-color: rgb(235, 234, 228);
+    /* background-color: rgba(235, 234, 228, 0.452); */
+    background-color: transparent;
     border-radius: 10px;
-    margin : 10px 10px 0px 10px;
+    /* margin : 10px 10px 0px 10px; */
   }
   .modalForm header {
     display: flex;
@@ -30,8 +31,8 @@
     border: 0;
   }
   .modal > section {
-    width: 250px;
-    height: 300px;
+    width: 600px;
+    height: 550px;
     /* margin: 0 auto; */
     border-radius: 50px;
     background-color: rgba(129, 127, 127, 0.945);
@@ -63,8 +64,13 @@
 .confirmBtn {
     background-color: #08d9d6;
     width: 80px;
-    height: 30px;
+    height: 40px;
     border-radius: 10px;
+    width: fit-content;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 13px;
+    text-align: center;
   }
   .modal.openModal {
     display: flex;
@@ -74,8 +80,8 @@
     animation: modal-bg-show 0.3s;
   }
   .icon {
-    height: 50px;
-    width: 50px;
+    height: 120px;
+    width: 120px;
   }
   
   .main {
@@ -110,6 +116,7 @@
   .informBorder {
     align-items: center;
     display: flex;
+    margin: 15px;
     flex-direction: column;
   }
   .informText{
@@ -122,12 +129,9 @@
     height: 33px;
     background-color: #eee;
     padding: 10px;
-    font-size: 15px;
+    font-size: 20px;
   }
-  .confirmBtn {
-    font-size: 15px;
-    font-weight: bold;
-  }
+
   .text {
     text-align: center;
     font-size: 20px;
